--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,14 @@
     <string name="menu_slideshow">Slideshow</string>
     <string name="title_activity_inicio">Inicio</string>
     <string name="Header">User</string>
+
+    <string name="comida_precio">0.00</string>
+    <string name="comida_name">None</string>
+    <string name="comida_descripcion">Descripción</string>
+    <string name="comida_desc"> </string>
+
+    <string name="ButtonL">-</string>
+    <string name="buttonR">+</string>
+
+    <string name="textViewNumber">0</string>
 </resources>
