Avance y arreglos en el activity_inicio_drawer.xml, avance en el CarritoAdapter para eliminar Pedidos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     //INICIO
+    <string name="ini_title">Pide Altoq</string>
     <string name="app_name">PideAltoq</string>
     <string name="txt_cel">N° de Celular</string>
     <string name="txt_pass">Contraseña</string>
