--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,9 @@
 
     <string name="TextTotal">Total: </string>
     <string name="btn_confirm">Confirmar Orden </string>
+
+
+    <string name="_0_00">0.00</string>
+    <string name="comidanames">comidaname</string>
+    <string name="init_carritos">init_carrito</string>
 </resources>
