Generador de Tokens para notificaciones en el servidor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     //INICIO
-    <string name="ini_title">Pide Altoq</string>
-    <string name="app_name">PideAltoq</string>
+    <string name="ini_title">Pide Altoque</string>
+    <string name="app_name">PideAltoque</string>
     <string name="txt_cel">N° de Celular</string>
     <string name="txt_pass">Contraseña</string>
     <string name="btn_login">Iniciar Sesión</string>
